--- a/_laytouts/default.html
+++ b/_laytouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 
   {% include head.html %}
 
@@ -14,7 +14,6 @@
     </main>
 
     {% include footer.html %}
-
-  </body>
-
+    {% include analytics.html %}
+	</body>
 </html>
