--- a/resume/index.html
+++ b/resume/index.html
@@ -581,8 +581,9 @@
       <div class="text-center flex-1">
         <a class="screenonly absolute right-0 mr-[-30px] mt-[-40px] bg-inset bg-customBlueLight px-2 py-1 rounded-b-lg shadow hover:bg-customBlue align-middle
         align-middle flex items-center" target="_blank" href="./2024-07-04--CostinGrigore-resume.pdf">
-          <svg fill="#000000" height="2em" width="2em" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-10 -10 68 68" xml:space="preserve">
+          <svg class="screenonly" fill="#000000" height="2em" width="2em" version="1.1" id="Capa_1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-10 -10 68 68"
+            xml:space="preserve">
             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
             <g id="SVGRepo_iconCarrier">
