--- a/resume/2024-07-04--CostinGrigore-Resume.html
+++ b/resume/2024-07-04--CostinGrigore-Resume.html
@@ -444,6 +444,10 @@
   </script>
   <script src="https://unpkg.com/pagedjs@0.4.3/dist/paged.polyfill.js"></script>
   <!-- <script src="js/paged.polyfill-0.4.3.js"></script> -->
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "51bb9c00c0ce4dd39b8aa2401f66a289"}'></script>
+  <!-- End Cloudflare Web Analytics -->
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
